--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,6 @@ services:
     ports:
       - "2222:22"
     volumes:
-      - ./authorized_keys:/root/.ssh/authorized_keys
       - /var/run/docker.sock:/var/run/docker.sock  # Docker socket
+      - ./authorized_keys:/root/.ssh/authorized_keys
+      - ./ssh-keys:/etc/ssh/server-keys
