--- a/my-ssh.conf
+++ b/my-ssh.conf
@@ -1,3 +1,3 @@
-# PermitRootLogin prohibit-password
+PermitRootLogin prohibit-password
 # MaxAuthTries 1
-# PasswordAuthentication no
+PasswordAuthentication no
